k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: devboard
  labels:
    app: devboard-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-backend
  template:
    metadata:
      labels:
        app: devboard-backend
    spec:
      containers:
      - name: backend-devboard
        image: sangitasahoo/devboard-be:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
