k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: devboard
  labels:
    app: devboard-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-postgres
  template:
    metadata:
      labels:
        app: devboard-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: init
            mountPath: /docker-entrypoint-initdb.d
            readOnly: true
          - name: data 
            mountPath: /var/lib/postgresql/data

      volumes:
        - name: init
          configMap:
            name: postgres-init 
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
