k8s/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: devboard
  labels:
    app: devboard-postgres
spec:
  serviceName: postgres
  replicas: 2
  selector:
    matchLabels:
      app: devboard-postgres
  template:
    metadata:
      labels:
        app: devboard-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
          - containerPort: 5432
        readinessProbe:
          exec:
            command: ["sh", "-c", "pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)"]
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
          - name: init
            mountPath: /docker-entrypoint-initdb.d
            readOnly: true
          - name: data 
            mountPath: /var/lib/postgresql/data

      volumes:
        - name: init
          configMap:
            name: postgres-init 
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: devboard
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
