k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devboard-frontend-service
  namespace: devboard
spec:
  type: NodePort
  selector:
    app: devboard-frontend
  ports:
    - protocol: TCP
      port: 8081 #service-port
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 5173  # Pod port (container port)
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30080  # Cluster Port

   #nodeport-port-container-port
